--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write .",
     "migrate": "prisma migrate dev",
-    "generate":"prisma generate",
+    "generate": "prisma generate",
     "studio": "prisma studio",
     "push": "prisma db push",
     "pull": "prisma db pull"
@@ -29,6 +29,7 @@
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "bcrypt": "^6.0.0",
+    "better-auth": "^1.4.18",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
@@ -51,6 +52,6 @@
     "prettier": "^3.8.1",
     "prisma": "^7.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "6.0.0-dev.20260214"
   }
 }
