--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2023",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "bundler",
     "outDir": "./dist",
     "rootDir": "./src",
