--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "http-status": "^2.1.0",
+    "http-status-code": "^2.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "tsx": "^4.21.0",
