--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^5.2.1",
     "http-status": "^2.1.0",
     "http-status-code": "^2.1.0",
+    "ms": "^2.1.3",
     "pg": "^8.18.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.6"
@@ -46,6 +47,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/ms": "^2.1.0",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
     "eslint": "^10.0.0",
