--- a/package.json
+++ b/package.json
@@ -28,15 +28,19 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
+    "@types/ejs": "^3.1.5",
+    "@types/nodemailer": "^7.0.10",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.4.18",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
     "http-status": "^2.1.0",
     "http-status-code": "^2.1.0",
     "ms": "^2.1.3",
+    "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.6"
