--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/nodemailer": "^7.0.10",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.4.18",
+    "cloudinary": "^2.9.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
@@ -40,6 +41,8 @@
     "http-status": "^2.1.0",
     "http-status-code": "^2.1.0",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "tsx": "^4.21.0",
@@ -52,6 +55,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
     "eslint": "^10.0.0",
