--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
+    "qs": "^6.15.0",
     "tsx": "^4.21.0",
     "zod": "^4.3.6"
   },
@@ -58,6 +59,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.2.3",
     "@types/pg": "^8.16.0",
+    "@types/qs": "^6.14.0",
     "eslint": "^10.0.0",
     "jsonwebtoken": "^9.0.3",
     "prettier": "^3.8.1",
